--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,24 @@ li{
     list-style: none;
 }
 
-h1, h2, h3, p{
+h1,
+h2,
+h3,
+p{
     margin: 0;
 }
 
+.visually__hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    clip: rect(0 0 0 0);
+}
+
 body{
+    font-family: "Rethink Sans", sans-serif;
+    font-style: normal;
     font-size: 16px;
     line-height: 1.3;
     font-weight: 600;
@@ -43,4 +56,22 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.menu__list{
+    display: flex;
+    font-size: 20px;
+    font-weight: 700;
+    color: #0A507A;
+    gap: 40px;
+}
+
+.header__phone{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #0A507A;
+    padding: 10px 20px;
+    border-radius: 30px;
+    color: #fff;
 }
