--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body{
     font-size: 16px;
     line-height: 1.3;
     font-weight: 600;
+    color: #2B2A29;
 }
 
 .container{
@@ -52,7 +53,7 @@ body{
 }
 
 .header__top{
-    padding: 50px 0 33px;
+    padding: 50px 0 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -74,4 +75,30 @@ body{
     padding: 10px 20px;
     border-radius: 30px;
     color: #fff;
+}
+
+.title-img{
+    margin-bottom: 12px;
+    width: 100%;
+}
+
+.title-text{
+    color: #fff;
+    font-size: 20px;
+    background-color: #2B2A29;
+    border-radius: 30px;
+    padding: 10px 20px;
+    display: inline-block;
+}
+
+.header__content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__info-list{
+    display: flex;
+    gap: 10px 18px;
+    flex-wrap: wrap;
+    max-width: 485px;
 }
