--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,73 @@ body{
 
 .header__info-list{
     display: flex;
-    gap: 10px 18px;
+    gap: 18px 10px;
     flex-wrap: wrap;
-    max-width: 485px;
+    max-width: 490px;
+}
+
+.header__info-item{
+    padding: 10px 20px;
+    color: #0A507A;
+    border-radius: 30px;
+    border: 1px solid #0A507A;
+    font-size: 26px;
+    font-weight: 700;
+}
+
+
+.header__social-list{
+    display: flex;
+    gap: 20px;
+}
+
+.header__news-box{
+    display: flex;
+    flex-direction: column;
+    padding: 50px 20px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, .8);
+}
+
+.header__news-title,
+.header__news-time{
+    font-size: 32px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.header__news-time{
+    margin-bottom: 10px;
+}
+
+.header__news-link{
+    text-transform: uppercase;
+    font-weight: 800;
+    text-decoration: underline;
+    margin-bottom: 30px;
+    align-self: flex-start;
+}
+
+.header__buttons{
+    display: flex;
+    gap: 20px;
+}
+
+.header__buttons a{
+    font-size: 42px;
+    font-weight: 800;
+    padding: 10px 20px;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+
+.header__buttons-book{
+    background-color: #2B2A29;
+    color: #fff;
+}
+
+.header__buttons-activities{
+    color: #2B2A29;
+    background-color: rgba(255, 255, 255, .3);
+    border: 1px solid #2B2A29;
 }
