--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ body{
     margin: 0 auto;
 }
 
+.header{
+    background-image: url(../images/background.png);
+    background-repeat: no-repeat;
+    background-position: top center;
+    min-height: 100vh;
+}
+
 .header__top{
     padding: 50px 0 90px;
     display: flex;
@@ -80,6 +87,8 @@ body{
 .title-img{
     margin-bottom: 12px;
     width: 100%;
+    position: relative;
+    z-index: -1;
 }
 
 .title-text{
@@ -94,6 +103,13 @@ body{
 .header__content{
     display: flex;
     justify-content: space-between;
+}
+
+.header__info{
+    display: flex;
+    flex-direction: column;
+    gap: 118px;
+    margin-top: auto;
 }
 
 .header__info-list{
@@ -113,9 +129,17 @@ body{
 }
 
 
+.header__social{
+    margin-top: auto;
+}
+
 .header__social-list{
     display: flex;
     gap: 20px;
+}
+
+.header__news{
+    margin-top: -50px;
 }
 
 .header__news-box{
@@ -151,7 +175,7 @@ body{
 }
 
 .header__buttons a{
-    font-size: 42px;
+    font-size: 32px;
     font-weight: 800;
     padding: 10px 20px;
     border-radius: 30px;
@@ -168,3 +192,4 @@ body{
     background-color: rgba(255, 255, 255, .3);
     border: 1px solid #2B2A29;
 }
+
