--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 p{
     margin: 0;
 }
@@ -178,7 +179,7 @@ body{
     gap: 20px;
 }
 
-.header__buttons a{
+.header__buttons-activities{
     font-size: 32px;
     font-weight: 800;
     padding: 10px 20px;
@@ -186,7 +187,12 @@ body{
     text-transform: uppercase;
 }
 
-.header__buttons-book{
+.buttons-book{
+    font-size: 32px;
+    font-weight: 800;
+    padding: 10px 20px;
+    border-radius: 30px;
+    text-transform: uppercase;
     background-color: #2B2A29;
     color: #fff;
 }
@@ -223,8 +229,12 @@ body{
 
 .about__inner {
     display: flex;
+    justify-content: space-between;
 }
 .about__content {
+    max-width: 560px;
+    display: flex;
+    flex-direction: column;
 }
 .about__subtitle {
     font-size: 20px;
@@ -242,12 +252,95 @@ body{
 .about__list {
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
 }
+
 .about__item {
+    font-size: 26px;
+    font-weight: 700;
+    border: 1px solid #0A507A;
+    color: #0A507A;
+    border-radius: 30px;
+    padding: 10px 20px;
 }
 .about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: auto;
 }
+
 .about__img {
+    position: relative;
 }
+
 .about__link {
+    position: absolute;
+    right: 68px;
+    bottom: 46px;
+    font-size: 32px;
+    font-weight: 800;
+    border: 1px solid #fff;
+    color: #fff;
+    border-radius: 30px;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.activities {
+    margin-bottom: 100px;
+}
+
+.activities__subtitle{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.activities__info {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+
+.activities__title {
+    font-size: 64px;
+    font-weight: 800;
+    text-transform: uppercase;
+    flex-basis: 50%;
+}
+
+.activities__text {
+    padding: 12px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-between;
+    flex-basis: 50%;
+}
+.activities__text .buttons-book {
+    align-self: start;
+}
+
+.activities__list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.activities__item {
+    border: 1px solid #2B2A29;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.activities__item h5{
+    font-size: 26px;
+    font-weight: 700;
+    max-width: 115px;
+    text-align: center;
 }
