--- a/css/style.css
+++ b/css/style.css
@@ -405,34 +405,95 @@ body{
 }
 
 .footer {
+    padding: 100px 0;
     background-color: #2B2A29;
+    color: #fff;
 }
 .footer__inner{
     max-width: 1160px;
+    padding: 0 10px;
+    margin: 0 auto;
 }
 .footer__top {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
 }
+
 .footer__title {
+    font-size: 64px;
+    font-weight: 800;
+    text-transform: uppercase;
 }
-.footer__logo {
-}
-.footer__info {
-}
+
 .footer__info-list {
+    display: flex;
+    gap: 64px;
+    margin-bottom: 60px;
 }
+
 .footer__info-item {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
+
+.footer__info-item dt {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.footer__info-item dd {
+    margin-left: 0;
+}
+
+.footer__info-item span {
+    display: block;
+}
+
 .footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    align-items: flex-end;
 }
-.social-list {
-}
-.social-item {
-}
-.social-link {
-}
+
 .footer__nav {
+    display: flex;
+    gap: 40px;
 }
-.footer__nav-item {
+
+.menu__btn{
+    display: none;
+    width: 50px;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    padding: 0;
 }
-.footer__nav-link {
+
+.menu__btn span{
+    width: 100%;
+    height: 4px;
+    background-color: #0A507A;
+}
+
+@media (max-width:992px) {
+    .menu__btn {
+        display: flex;
+    }
+    .menu__list {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: #0A507A;
+        color: #fff;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
