--- a/css/style.css
+++ b/css/style.css
@@ -473,12 +473,18 @@ body{
     border: none;
     background-color: transparent;
     padding: 0;
+    position: relative;
+    z-index: 1;
 }
 
 .menu__btn span{
     width: 100%;
     height: 4px;
     background-color: #0A507A;
+}
+
+.menu.menu--open .menu__list{
+    transform: translateY(0);
 }
 
 @media (max-width:992px) {
@@ -494,6 +500,10 @@ body{
         background-color: #0A507A;
         color: #fff;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-evenly;
+        align-items: center;
+        text-transform: uppercase;
+        font-size: 24px;
+        transform: translateY(-100%);
     }
 }
