--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,8 @@ body{
     }
     .about,
     .site-images,
-    .activities{
+    .activities,
+    .reviews{
         margin-bottom: 75px;
     }
     .activities__info{
@@ -585,11 +586,47 @@ body{
     .reviews__items{
         grid-template-columns: repeat(2, 1fr);
     }
+    .reviews__item:nth-child(even) {
+        padding-top: 0px
+    }
+    .reviews-img{
+        width: 100%;
+    }
+    .reviews__title{
+        font-size: 44px;
+    }
 }
 
 @media (max-width:800px){
     .activities__list{
         grid-template-columns: repeat(3, 1fr);
+    }
+    .footer{
+        padding: 75px 0;
+    }
+    .footer__title{
+        font-size: 44px;
+    }
+    .footer__bottom{
+        flex-wrap: wrap;
+    }
+    .footer__info-list{
+       gap: 15px; 
+    }
+}
+
+@media (max-width:570px){
+    .footer__top{
+        flex-wrap: wrap-reverse;
+        gap: 30px;
+        justify-content: center;
+    }
+    .footer__title{
+        text-align: center;
+    }
+    .footer__info-list{
+        flex-wrap: wrap;
+        gap: 30px;
     }
 }
 
@@ -614,11 +651,13 @@ body{
     .about__title{
         font-size: 44px ;
     }
-    .activities__title{
+    .activities__title,
+    .reviews__title{
         font-size: 36px;
     }
     .about__subtitle,
-    .activities__subtitle{
+    .activities__subtitle,
+    .reviews__subtitle{
         margin-bottom: 10px;
     }
     .activities__list{
@@ -626,5 +665,11 @@ body{
     }
     .site-images{
         display: none;
+    }
+    .reviews__top{
+        margin-bottom: 30px;
+    }
+    .reviews__items{
+        grid-template-columns: 1fr;
     }
 }
